--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Corpolink a Corporate Category Bootstrap Responsive Website Template - Home : W3Layouts</title>
+    <title>Gamma Digital Marketing Agency</title>
 
 
     <link href="//fonts.googleapis.com/css?family=Spartan:400,500,600,700,900&display=swap" rel="stylesheet">
