Minor Bug Fixes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ Author URL: http://w3layouts.com
                         </a>
                     </h1>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="fa icon-expand fa-bars"></span>
-            <span class="fa icon-close fa-times"></span>
-          </button>
+                        <span class="fa icon-expand fa-bars"></span>
+                        <span class="fa icon-close fa-times"></span>
+                    </button>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-5">
@@ -53,12 +53,12 @@ Author URL: http://w3layouts.com
                         <nav class="navigation">
                             <div class="theme-switch-wrapper">
                                 <label class="theme-switch" for="checkbox">
-                  <input type="checkbox" id="checkbox">
-                  <div class="mode-container">
-                    <i class="gg-sun"></i>
-                    <i class="gg-moon"></i>
-                  </div>
-                </label>
+                                    <input type="checkbox" id="checkbox">
+                                    <div class="mode-container">
+                                        <i class="gg-sun"></i>
+                                        <i class="gg-moon"></i>
+                                    </div>
+                                </label>
                             </div>
                         </nav>
                     </div>
@@ -73,9 +73,11 @@ Author URL: http://w3layouts.com
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-12 mt-lg-0 mt-4">
                     <h3 class="mb-2 title-big mb-4">We help innovators to reach the market.</h3>
-                    <p>Our platform is tailored for businesses and innovators with a product that needs public awareness, social media srategy and more.</p>
+                    <p>At Gamma we are convinced that the future of marketing is now on the internet and we are at the forefront of that revolution, Our main goal is to help you get value for your money through giving you the best pool of influencers using
+                        the best channels that are suitable to your product or/and services and are sensitive to your brand needs.</p>
+                    <p>By working with us you will have all your social media marketing needs covered under one roof</p>
                     <div class="mt-sm-5 mt-4">
-                        <a class="btn btn-primary btn-style" href="contact.html"> Get a Quote </a>
+                        <a class="btn btn-primary btn-style" href="mailto:gammadma@gmail.com"> Get a Quote </a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-8 col-sm-10 mt-lg-0 mt-5">
@@ -106,7 +108,6 @@ Author URL: http://w3layouts.com
                                         </div>
                                         <div class="icon-info">
                                             <h5 class="pt-2">Awareness Campaign </h5>
-                                            <!-- <p> Lorem ipsum dolor sit amet, dolor elit, sed eiusmod tempor init sit.</p> -->
 
                                         </div>
                                     </div>
@@ -216,6 +217,21 @@ Author URL: http://w3layouts.com
     </section>
     <!-- //services page block 2 -->
 
+    <section class="pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="carousel-item active text-center mt-5">
+                    <div class="media-body ml-3">
+                        <blockquote class="blockquote border-0 p-0">
+                            <p class="font-italic lead"> <i class="fa fa-quote-left mr-3 text-success"></i>Stopping advertising to save money is like stopping your watch to save time.</p>
+                            <footer class="blockquote-footer text-center mt-3">Henry Ford</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- footer-28 block -->
     <section class="w3l-footer">
@@ -262,8 +278,8 @@ Author URL: http://w3layouts.com
             </div>
             <!-- move top -->
             <button onclick="topFunction()" id="movetop" title="Go to top">
-        <span class="fa fa-angle-up"></span>
-      </button>
+                <span class="fa fa-angle-up"></span>
+            </button>
             <script>
                 // When the user scrolls down 20px from the top of the document, show the button
                 window.onscroll = function() {
