--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
 
     <title>Gamma Digital Marketing Agency</title>
 </head>
@@ -87,7 +88,8 @@
                             <div class="contact-info">
                                 <img src="assets/images/support.png" alt="" class="img-fluid">
                                 <h4>Phone</h4>
-                                <p><a href="tel:+254724785799">0724785799</a></p>
+                                <p><a href="tel:+254717302222"><i class="fab fa-whatsapp mr-3"></i>0717302222</a></p>
+                                <p><a href="tel:+254724785799"><i class="fas fa-phone-alt mr-3"></i>0724785799</a></p>
                             </div>
                             <div class="contact-info">
                                 <img src="assets/images/envelope.png" alt="" class="img-fluid">
