--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                             <div class="contact-info">
                                 <img src="assets/images/envelope.png" alt="" class="img-fluid">
                                 <h4>Mail</h4>
-                                <p><a href="mailto:gammadma@gmail.com" class="email">gammaDMA@gmail.com</a></p>
+                                <p><a href="mailto:support@gammadigital.info" class="email">support@gammadigital.info</a></p>
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                                     <p><strong>Phone</strong> : <a href="tel:+254724785799">0724785799</a></p>
                                 </li>
                                 <li>
-                                    <p><strong>Email</strong> : <a href="mailto:gammadma@gmail.com">gammaDMA@gmail.com</a></p>
+                                    <p><strong>Email</strong> : <a href="mailto:support@gammadigital.info">support@gammadigital.info</a></p>
                                 </li>
                             </ul>
                         </div>
