--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Author URL: http://w3layouts.com
                         the best channels that are suitable to your product or/and services and are sensitive to your brand needs.</p>
                     <p>By working with us you will have all your social media marketing needs covered under one roof</p>
                     <div class="mt-sm-5 mt-4">
-                        <a class="btn btn-primary btn-style" href="mailto:gammadma@gmail.com"> Get a Quote </a>
+                        <a class="btn btn-primary btn-style" href="mailto:support@gammadigital.info"> Get a Quote </a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-8 col-sm-10 mt-lg-0 mt-5">
@@ -246,7 +246,7 @@ Author URL: http://w3layouts.com
                                     <p><strong>Phone</strong> : <a href="tel:+254724785799">0724785799</a></p>
                                 </li>
                                 <li>
-                                    <p><strong>Email</strong> : <a href="mailto:gammadma@gmail.com">gammaDMA@gmail.com</a></p>
+                                    <p><strong>Email</strong> : <a href="mailto:support@gammadigital.info">support@gammadigital.info</a></p>
                                 </li>
                             </ul>
                         </div>
