--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                 <div class="container">
                     <h3 class="title-big text-center mb-md-5 mb-4">Get in touch with us</h3>
                     <div class="d-grid contact section-gap">
-                        <div class="contact-info-left d-grid text-center">
+                        <div class="contact-info-left d-grid text-center mb-md-5 mb-4">
                             <div class="contact-info">
                                 <img src="assets/images/support.png" alt="" class="img-fluid">
                                 <h4>Phone</h4>
