Added One Column on Contact

--- a/contact.html
+++ b/contact.html
@@ -86,10 +86,14 @@
                     <div class="d-grid contact section-gap">
                         <div class="contact-info-left d-grid text-center mb-md-5 mb-4">
                             <div class="contact-info">
+                                <img src="assets/images/whatsapp.png" alt="" class="img-fluid" style="height: 45px;">
+                                <h4>WhatsApp</h4>
+                                <p><a href="tel:+254717302222">0717302222</a></p>
+                            </div>
+                            <div class="contact-info">
                                 <img src="assets/images/support.png" alt="" class="img-fluid">
                                 <h4>Phone</h4>
-                                <p><a href="tel:+254717302222"><i class="fab fa-whatsapp mr-3"></i>0717302222</a></p>
-                                <p><a href="tel:+254724785799"><i class="fas fa-phone-alt mr-3"></i>0724785799</a></p>
+                                <p><a href="tel:+254724785799">0724785799</a></p>
                             </div>
                             <div class="contact-info">
                                 <img src="assets/images/envelope.png" alt="" class="img-fluid">
