--- a/contact.html
+++ b/contact.html
@@ -88,12 +88,12 @@
                             <div class="contact-info">
                                 <img src="assets/images/whatsapp.png" alt="" class="img-fluid" style="height: 45px;">
                                 <h4>WhatsApp</h4>
-                                <p><a href="tel:+254717302222">0717302222</a></p>
+                                <p><a href="tel:+254717302222">+254717302222</a></p>
                             </div>
                             <div class="contact-info">
                                 <img src="assets/images/support.png" alt="" class="img-fluid">
                                 <h4>Phone</h4>
-                                <p><a href="tel:+254724785799">0724785799</a></p>
+                                <p><a href="tel:+254724785799">+254724785799</a></p>
                             </div>
                             <div class="contact-info">
                                 <img src="assets/images/envelope.png" alt="" class="img-fluid">
