--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ Author URL: http://w3layouts.com
                             <h6 class="footer-title-28">Contact information</h6>
                             <ul>
                                 <li>
-                                    <p><strong>Phone</strong> : <a href="tel:+254724785799">0724785799</a></p>
+                                    <p><strong>Phone</strong> : <a href="tel:+254724785799">+254724785799</a></p>
                                 </li>
                                 <li>
                                     <p><strong>Email</strong> : <a href="mailto:support@gammadigital.info">support@gammadigital.info</a></p>
