--- a/index.html
+++ b/index.html
@@ -25,32 +25,26 @@ Author URL: http://w3layouts.com
         <section class="w3l-header-4">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <h1>
-                        <a class="navbar-brand" href="index.html"></span>Gamma<span> Digital Marketing</span>
-                        </a>
-                    </h1>
-                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="fa icon-expand fa-bars"></span>
-                        <span class="fa icon-close fa-times"></span>
+                    <a class="navbar-brand" href="index.html">Gamma<span> Digital Marketing</span></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-5">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home </a>
+                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                             </li>
-
-                            <li class="nav-item @@services__active">
-                                <a class="nav-link" href="#features">Services</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html#features">Services</a>
                             </li>
 
                         </ul>
-                        <ul class="navbar-nav search-right mt-lg-0 mt-2">
-                            <li class="nav-item"><a href="contact.html" class="btn btn-primary d-none d-lg-block btn-style mr-2">Contact Us</a></li>
-                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <a href="contact.html" class="btn btn-outline-success my-2 my-sm-0 mr-2" type="submit">Contact Us</a>
+                        </form>
                     </div>
 
-                    <!-- toggle switch for light and dark theme -->
                     <div class="mobile-position">
                         <nav class="navigation">
                             <div class="theme-switch-wrapper">
@@ -64,6 +58,7 @@ Author URL: http://w3layouts.com
                             </div>
                         </nav>
                     </div>
+
                 </nav>
             </div>
         </section>
