--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
                                 <div class="col-sm-4 col-6 footer-list-28 mt-5">
                                     <h6 class="footer-title-28">Company</h6>
                                     <ul>
-                                        <li><a href="#features">Our Services</a></li>
+                                        <li><a href="index.html#features">Our Services</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-sm-4 col-6 footer-list-28 mt-5">
